# awgur

./: .gitignore  Cargo.toml  README.md
bindings/: build.rs  cargo.toml
examples/demo/: main.rs
samples/demo/: Cargo.toml  build.rs
samples/demo/src/: main.rs
src/: background.rs  error.rs  event.rs  frame.rs  lib.rs  ribbon.rs  slot.rs
src/gui/: background.rs  button.rs  frame.rs  layer_stack.rs  mod.rs  panel.rs  pipes.rs  ribbon.rs  root.rs  root_slot.rs  slot.rs  surface.rs  text.rs
src/window/: graphics.rs  interop.rs  mod.rs  native_window.rs  wide_string.rs
