[package]
name = "wag"
version = "0.1.0"
edition = "2021"

[dependencies]
async_object = "0.1.2"
derive_weak = "0.1.0"
futures = "0.3.17"
thiserror = "1.0"
float-ord = "0.3.2"
winit = "0.26.0"
typed-builder = "0.10.0"
async-trait = "0.1.52"
async-std = "1.11.0"

[dependencies.windows]
version = "0.37.0"
features = [
    "Foundation_Collections",
    "Foundation_Numerics",
    "Graphics",
    "System",
    "Foundation",
    "UI_Composition",
    "UI_Composition_Desktop",
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
    "Win32_System_WinRT",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_WinRT_Composition",
    "Graphics_DirectX",
]
