[package]
name = "wag"
version = "0.1.0"
edition = "2021"

[dependencies]
async_event_streams = { path = "../async-event-streams" }
#async_event_streams = "0.1.1"
futures = "0.3.17"
thiserror = "1.0"
float-ord = "0.3.2"
winit = "0.26.0"
typed-builder = "0.10.0"
async-trait = "0.1.52"
async-std = "1.11.0"

[dependencies.windows]
version = "0.39.0"
features = [
  "Foundation_Collections",
  "Foundation_Numerics",
  "Graphics",
  "System",
  "Foundation",
  "UI_Composition",
  "UI_Composition_Desktop",
  "Win32_Foundation",
  "Win32_Graphics_Gdi",
  "Win32_Graphics_DirectWrite",
  "Win32_Graphics_Direct2D",
  "Win32_Graphics_Direct2D_Common",
  "Win32_Graphics_Direct3D11",
  "Win32_Graphics_Direct3D",
  "Win32_Graphics_Dxgi",
  "Win32_System_LibraryLoader",
  "Win32_System_WinRT",
  "Win32_UI_WindowsAndMessaging",
  "Win32_System_WinRT_Composition",
  "Graphics_DirectX",
]

[build-dependencies.windows-app]
git = "https://github.com/microsoft/windows-app-rs"
features = ["WindowsAppSdk_Foundation"]

[dependencies.windows-app]
git = "https://github.com/microsoft/windows-app-rs"
features = ["WindowsAppSdk_Foundation", "Windows_System_Power"]
